# muroshima-stt

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  create_tables.sql  pyproject.toml  requirements.txt  requirements_new.txt  run_app.sh  settings.json  test_vad.py  test_vad_simple.py
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.streamlit/: config.toml  secrets.toml.example
database/: SUPABASE_SETUP.md  test_db_connection.py
docs/: turso-rag-research.md
recording/: Dockerfile.txt  index-STT.html  index.js  package.json
scripts/: backfill_rag.py  migrate_sqlite_to_turso.py  migrate_to_turso_libsql.py  sync_db_to_vector.py  sync_vector_db.py  test_semantic_search.py  transcribe_all.py  transcribe_amazon.py  transcribe_azure.py  transcribe_elevenlabs.py  transcribe_google.py  transcribe_openai.py  transcribe_openai_debug.py  transcribe_openai_improved.py
src/: app.py  app_settings.py  audio_storage.py  auth.py  env_watcher.py  models.py  rag_qa.py  semantic_search.py  stt_wrapper.py  text_structurer.py  vad_elevenlabs.py  vad_processor.py
src/services/: audio_utils.py  ceo_processor.py  cloudflare_r2.py  rag_service.py  storage.py  vad.py
src/services/rag/: __init__.py  chunker.py  date_utils.py  prompt_builder.py  retriever.py
src/ui/: sidebar.py
src/ui/tabs/: ceo_db_tab.py  ceo_tab.py  db_tab.py  mic_tab.py  rag_tab.py  results_tab.py  upload_tab.py
stt/: settings.json
stt/src/: env_watcher.py
